@@ -10,6 +10,8 @@
 - API Change: FreeTypeFontParameter has new fields for rendering borders and shadows.
 - FreeTypeFontParameter can render much better fonts at small sizes using gamma settings.
 - BitmapFont can now render missing (tofu) glyph for glyphs not in the font.
+- Can specify TextureRegionDrawable in Skin from Json so its padding can be explicitly defined from Json.
+- Skin's TintedDrawable now works with TiledDrawable.
 
 [1.7.1]
 - Fixes AtlasTmxMapLoader region name loading to tileset name instead of filename
